2006-04-28  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=8653>
        Remove a use of hasMoreThanOneBlock

        Deleting didn't merge because of code that stopped the merge whenever 
        the end of the selection to delete was in a fully selected line.
        * editing/deleting/merge-endOfParagraph-expected.checksum: Added.
        * editing/deleting/merge-endOfParagraph-expected.png: Added.
        * editing/deleting/merge-endOfParagraph-expected.txt: Added.
        * editing/deleting/merge-endOfParagraph.html: Added.
        
        Two testcases where paste did not request a merge from deletion, but should have.
        * editing/pasteboard/merge-after-delete-1-expected.checksum: Added.
        * editing/pasteboard/merge-after-delete-1-expected.png: Added.
        * editing/pasteboard/merge-after-delete-1-expected.txt: Added.
        * editing/pasteboard/merge-after-delete-1.html: Added.
        * editing/pasteboard/merge-after-delete-2-expected.checksum: Added.
        * editing/pasteboard/merge-after-delete-2-expected.png: Added.
        * editing/pasteboard/merge-after-delete-2-expected.txt: Added.
        * editing/pasteboard/merge-after-delete-2.html: Added.
        
        Code that prevents nesting incoming blocks in the block being pasted into
        could reverse the order of pasted paragraphs.
        * editing/pasteboard/prevent-block-nesting-01-expected.checksum: Added.
        * editing/pasteboard/prevent-block-nesting-01-expected.png: Added.
        * editing/pasteboard/prevent-block-nesting-01-expected.txt: Added.
        * editing/pasteboard/prevent-block-nesting-01.html: Added.

2006-04-28  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by hyatt.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=5855
          REGRESSION: revert SGML comment parsing fix (comment parsing causes most of usbank.com page to be missing)
