@@ -1,0 +1,3 @@
+This tests that window.location.href serializes file urls correctly. If the test is successful, the text "SUCCESS" should be shown below.
+SUCCESS
+
